# Duplicate-File-Checker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUI_USAGE.md  LICENSE  README.md  demo.sh  example_usage.sh
scripts/: package-macos.sh
src/: config.rs  core.rs  gui.rs  lib.rs  main.rs  report.rs
